# repolix

./: .env.example  .gitignore  CONTEXT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  vite-env.d.ts
frontend/src/components/: AnswerPanel.tsx  ChunkCard.tsx  ChunkList.tsx  CitationList.tsx  QueryBox.tsx  ResultCard.tsx
repolens/: __init__.py  chunker.py  cli.py  embedder.py  llm.py  retriever.py  store.py  walker.py
repolix/: __init__.py  api.py  cli.py  llm.py  retriever.py  store.py  tour.py  trace.py  walker.py
tests/: conftest.py  test_api.py  test_chunker.py  test_cli.py  test_llm.py  test_retriever.py  test_store.py  test_trace.py  test_walker.py
