[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repolens"
version = "0.1.0"
description = "Local-first codebase context engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "openai>=1.0",
    "chromadb>=0.4",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
repolens = "repolens.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB_USERNAME/repolens"
Issues = "https://github.com/YOUR_GITHUB_USERNAME/repolens/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
